04_Netwoking + Load Balancing/app_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-int-lb
  labels:
    app: hello-kubernetes
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes
  type: LoadBalancer
