04_Netwoking + Load Balancing/app_service_clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-clusterip
  labels:
    app: hello-kubernetes
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes
  type: ClusterIP
