04_Netwoking + Load Balancing/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ???             # Ingress Name
  annotations:
     # Mögliche Annotations um den ingress mit GKE zu konfigurieren sind hier zu finden:
     # https://cloud.google.com/kubernetes-engine/docs/concepts/ingress-xlb
spec:
  defaultBackend:
    service:
      name: ???          # Name des Services der als Backend verwendet wird
      port:
        number: 80
