04_Netwoking + Load Balancing/policy_allow_egress_local.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-local
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
       - ipBlock:
           cidr: 10.0.0.0/8
      ports:
       - protocol: TCP
       - protocol: UDP
