04_Netwoking + Load Balancing/policy_allow_ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress
spec:
  policyTypes:
  - Ingress
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key: value                               # manually defined label for a namespace
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: namespace   # automatically generated label containing the namespace name
